--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+*
+    margin: 0
+    padding: 0   
+
+html
+    height: auto
+
+body
+    background: rgb(34,193,195)
+    background: linear-gradient(0deg, rgba(34,193,195,1) 10%, rgba(156,45,253,1) 40%)
+    background-repeat: no-repeat
+    font-family: Arial, sans-serif
+    height: auto
+    
+    
